--- a/package.json
+++ b/package.json
@@ -1,19 +1,25 @@
 {
   "name": "harmonia-booking-system",
   "version": "1.0.0",
-  "description": "Booking system backend for HARMONIA clinic",
+  "description": "Booking system backend for HARMONIA clinic - Railway ready",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "node server.js"
   },
   "keywords": [
     "booking",
     "clinic",
-    "appointments"
+    "appointments",
+    "express",
+    "nodejs"
   ],
-  "author": "",
+  "author": "HARMONIA",
   "license": "ISC",
+  "engines": {
+    "node": ">=14.0.0"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
